2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/Makefile.am:
	* src/.cvsignore:
	* src/gnome-sudoku.in:
	* src/gnome-sudoku:
	Fix Bug #382057 – assumed paths in python files, by importing
	pyexecdir into python path.

2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gnome_sudoku.py: Set F1 to open help contents, 
	patch from Thomas Andersen in Bug #376633. 

2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku.py: se gtk.AboutDialog instead of gnome.ui.About,
	patch from Thomas Andersen in Bug #379283. 

2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku.py: Convert keypad numbers to normal numbers,
	patch from Thomas Andersen in Bug #379285. 

2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* glade/game_selector/game_selector.glade:
	* glade/game_selector/game_selector.gladep: Remove unused glade files.

2006-11-05  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gtk_goodies/gconf_wrapper.py: Add support for BooleanType.

2006-11-04  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* images/footprints.png: Used shoe-prints. Note that if we get a
	real artist to pretty up this icon, it needs to contain mostly
	solid black that will gets properly re-colored when we add
	trackers of different colors.
	* src/lib/gnome_sudoku.py: Tweak our fix to Bug 369531; Use
	STOCK_DIALOG_INFO instead of STOCK_INFO for hints. Make sure
	tracker is off by default.
	* src/lib/gsudoku.py: Change colors for trackers to tango-y colors.	
	* src/lib/gtk_goodies/image_extras.py: Fix re-coloring of black png files.
	* src/lib/saver.py: Don't automatically show trackers just because
	there *are* trackers for a game; rely on the UI to save the
	toggled-state of tracker visibility on its own.

2006-11-03  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* src/lib/gnome_sudoku.py: Fix Bug 369531 [sudoku uses wrong icon for hints]
	* src/lib/*: Remove extra files that don't belong in CVS.