@@ -16,6 +16,11 @@ DESCRIPTION = _('GNOME Sudoku is a simple sudoku generator and player.  Sudoku i
 AUTHORS = ["Thomas M. Hinkle"]
 AUTO_SAVE= True
 MIN_NEW_PUZZLES = 90
+LICENSE = """This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License version 2 as published by the Free Software Foundation.
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. 
+
+You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"""
 
 APP_DATA_DIR = os.path.join('@prefix@', 'share') 
 ICON_DIR =     os.path.join(APP_DATA_DIR,'pixmaps')
