@@ -1,3 +1,8 @@
+2006-12-17  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
+	* src/lib/defaults.py.in:
+	* src/lib/gnome_sudoku.py: Add GNU license to about dialog.
+
 2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
 	* src/Makefile.am:
